<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/menu_item_game_scouting">
    <fragment
        android:id="@+id/menu_item_game_scouting"
        android:name="com.team3990.techscout.ui.GameDataEntryFragment"
        android:label="@string/game_scouting"
        tools:layout="@layout/fragment_game_data_entry" />
    <fragment
        android:id="@+id/menu_item_data_sheet"
        android:name="com.team3990.techscout.ui.DataSheetListFragment"
        android:label="@string/data_sheet" />
    <fragment
        android:id="@+id/menu_item_pit_scouting"
        android:name="com.team3990.techscout.ui.RobotDataEntryFragment"
        android:label="@string/pit_scouting" />
</navigation>